spictapp: only vignette missing

--- a/spictapp/apps/report/assessmentReport.Rmd
+++ b/spictapp/apps/report/assessmentReport.Rmd
@@ -1,11 +1,32 @@
 ---
 title: "Dynamic Assessment Report created by the spictapp"
-author: ""
+author: "Tobias K. Mildenberger"
 date: "`r Sys.Date()`"
-output: pdf_document
+output:
+    html_document:
+        toc: true
+        toc_depth: 2
+        toc_float:
+            collapsed: false
+            smooth_scroll: false
+        theme: united
+        highlight: tango
+    pdf_document:
+        toc: true
+        toc_depth: 2
+        highlight: tango
 params:
   rv: NA
 bibliography: "`r file.path(tempdir(), 'spictapp.bib')`"
+header-includes:
+ \usepackage{booktabs}
+ \usepackage{longtable}
+ \usepackage{array}
+ \usepackage{multirow}
+ \usepackage[table]{xcolor}
+ \usepackage{wrapfig}
+ \usepackage{float}
+ \floatplacement{figure}{H}
 ---
 
 ```{r ReaddataLoadLibraries, message=FALSE, include=FALSE, echo=FALSE}
@@ -18,12 +39,20 @@ knitr::opts_chunk$set(echo = FALSE,
                       message = FALSE,
                       include = TRUE,
                       collapse = TRUE,
-                      comment = "#>",
+                      comment = "",
                       fig.show = "hold",
+                      fig.align="center",
                       fig.width=10, fig.height=7)
+library(spict)
+library(knitr)
 ```
 
-## *Disclaimer*
+<br><br><br>
+\vspace*{1.5cm}
+
+<font size="-3">
+\small
+**Disclaimer**
 
 This report has been created automatically by the spictapp software. The authors
 of the app do not accept any responsibility or liability for the correctness and
@@ -31,41 +60,46 @@ reliability of the results summarised in the app or this report nor any
 conclusions based on them. The interpretation and use of the spictapp software,
 its results, and this report is strictly at your own risk.
 
-This report was created with the spictapp version `1.0.0` and the **`SPiCT`** package
-version `r packageVersion("spict")` [@spict].
+**Package version numbers**
 
-```{r}
-library(spict)
+This report was created with by spictapp (version `0.9.1`) based on the
+**`SPiCT`** package (version `r packageVersion("spict")`; @spict).
+
+</font>
+\normalsize
+
+<br><br><br>
+\vspace*{1.2cm}
+
+
+# Data
+The results in this report are based on the data set labelled
+`r paste0("'",strsplit(params$rv$filename,"Data: ")[[1]][2],"'")`.
+The columns in the uploaded data set (Table 1) were used in the
+analysis (first 10 rows of each column displayed). The complete data set is
+included in the appendix of this report.
+
+```{r rawdat}
+if(!is.null(params$rv$dat)) kable(
+                                head(params$rv$dat, 10), booktabs = TRUE,
+                                caption = "Input data.")
 ```
 
+The input list used for the SPiCT assessment can also be displayed graphically
+with the standard data plot in the spict package as shown in Fig. \ref{fig:dataplot}.
 
-## *Data*
-
-The results in this report are based on the data set labelled "`r
-strsplit(params$rv$filename,"Data: ")[[1]][2]`". Following columns in the uploaded data
-set were used in the analysis. Find the complete data set in the appendix of
-this report.
-
-```{r}
-if(!is.null(params$rv$dat)) head(params$rv$dat)
-```
-
-The SPiCT data plot:
-
-```{r}
+```{r dataplot, fig.width=6, fig.height=7, fig.cap = "SPiCT data plot.\\label{fig:dataplot}"}
 if(!is.null(params$rv$inp)) plotspict.data(params$rv$inp)
 ```
 
+<br><br>
 
-## *Settings*
+# Priors
 
-Following settings were used for the assessment.
+Following priors were defined:
+`r if(!is.null(params$rv$inp)) paste0(names(params$rv$inp$priors)[which(params$rv$inp$priorsuseflags == 1)], collapse = ", ")`.
 
-### *Priors*
-
-Priors
-
-```{r}
+```{r priorsplot, fig.width=5.5, fig.height=8, fig.cap = "Priors. \\label{fig:priorsplot}"}
 plotspict.priors.inp <- function(x, do.plot=NULL, stamp=get.version(), automfrow=TRUE){
     ## if check.inp has not been run yet
     if(!inherits(x, "spictcls")){
@@ -198,184 +232,379 @@ if(!is.null(params$rv$inp)){
 }
 ```
 
-## *Assessment results*
+<br><br>
 
-### *Convergence*
+# Assessment results
 
-```{r}
-if(!is.null(params$rv$fit)){
+The seed value for reproducible results was set to `r params$rv$seed`.
 
-    print(params$rv$fit$opt$convergence)
-
-}
-```
-
-### *Model parameters*
+## Convergence
 
 ```{r}
 if(!is.null(params$rv$fit)){
-
-    round(sumspict.parest(params$rv$fit),3)
-
-}
-```
-
-
-### *Reference points*
-
-#### *Stochastic reference points*
-
-```{r}
-if(!is.null(params$rv$fit)){
-
-    round(sumspict.srefpoints(params$rv$fit),3)
-
-}
-```
-
-
-#### *Deterministic reference points*
-
-```{r}
-if(!is.null(params$rv$fit)){
-
-    round(sumspict.drefpoints(params$rv$fit),3)
-
-}
-```
-
-
-### *States*
-
-```{r}
-if(!is.null(params$rv$fit)){
-
-    round(sumspict.states(params$rv$fit),3)
-
-}
-```
-
-
-### *Predictions*
-
-
-```{r}
-if(!is.null(params$rv$fit)){
-
-    round(sumspict.predictions(params$rv$fit),3)
-
-}
-```
-
-
-Plots
-
-## *Diagnostics*
-
-```{r}
-if(!is.null(params$rv$fit)){
-
-    sumspict.diagnostics(params$rv$fit)
-
-}
-```
-
-```{r}
-if(!is.null(params$rv$retro)){
-
-    plotspict.diagnostic(params$rv$fit)
-
-}
-```
-
-### *Retrospective analysis*
-
-```{r}
-if(!is.null(params$rv$retro)){
-
-    plotspict.retro(params$rv$retro)
-
-}
-```
-
-### *Sensitivity analysis to inital values*
-
-```{r}
-if(!is.null(params$rv$sensi)){
-
-    sumspict.ini(params$rv$sensi)
-
-}
-```
-
-
-
-## *Management*
-
-```{r}
-if(!is.null(params$rv$mana)){
-
-    man.timeline(params$rv$mana)
-
+    if(!params$rv$fit$opt$convergence)
+        writeLines(paste0("The SPiCT model reached convergence.")) else
+        writeLines(paste0("Subsequent results have to be treated with caution as the model did not reach convergence."))
 }else{
-
-    man.timeline(params$rv$inp)
+    writeLines(paste0("The following sections will be incomplete as no SPiCT model was fitted. Make sure to run 'Fit SPiCT' in the spictapp."))
 }
 ```
 
-`{r} if(!is.null(params$rv$mana)) names(params$rv$mana$man) else print("No management scenarios analysed!")`
+## Model parameters
 
+The following table includes the estimates (`estimate`) together with lower and
+upper 95% confidence intervals (`cilow` and `ciupp`, respectively), as well as
+the log estimates (`log.est`) of all fixed parameters of the SPiCT model.
 
 ```{r}
-if(!is.null(params$rv$mana)){
+if(!is.null(params$rv$fit))
+    kable(
+        round(sumspict.parest(params$rv$fit),3),
+        booktabs = TRUE,
+        caption = "Model parameters.")
+```
 
-    plot2(params$rv$mana)
+<font size="-3">
+\small Note, that the parameter 'alpha' is only included if a survey index was
+included in the input list and might be missing if SPiCT is used with catch and
+effort only.
 
-}
+</font>
+\normalsize
+
+## Reference points
+
+SPiCT estimates deterministic and stochastic biological reference points, namely
+$MSY$, $B_{MSY}$, and $F_{MSY}$. In most cases, the difference between the
+deterministic and stochastic reference levels are minor, but the stochastic
+reference levels correct for the presence of the noise term in the biomass
+equation of SPiCT.
+
+### Stochastic reference points
+
+Estimated stochastic reference points with lower and upper 95% confidence
+intervals, the log estimates, and the relative difference to the deterministic
+reference points (`rel.diff.Drp`) are:
+
+```{r}
+if(!is.null(params$rv$fit))
+    kable(
+        round(sumspict.srefpoints(params$rv$fit),3),
+        booktabs = TRUE,
+        caption = "Stochastic reference points.")
+```
+
+<font size="-3">
+\small Note, that the stochastic reference points are only defined for $n > 1$.
+Therefore, SPiCT overwrites the stochastic reference points with the
+deterministic reference points.
+
+</font>
+\normalsize
+
+### Deterministic reference points
+
+Comparitively, the deterministic reference points are:
+
+```{r}
+if(!is.null(params$rv$fit))
+    kable(
+        round(sumspict.drefpoints(params$rv$fit),3),
+        booktabs = TRUE,
+        caption = "Deterministic reference points.")
+```
+
+## States
+
+The biomass and fishing mortality in absolute terms and relative to reference
+points at the time of the last observation (end of catch or effort interval or
+time of last index observation) are called 'States' in SPiCT and estimated with
+confidence intervals as:
+
+```{r}
+if(!is.null(params$rv$fit))
+    kable(
+        round(sumspict.states(params$rv$fit),3),
+        booktabs = TRUE,
+        caption = "Model states.")
+```
+
+<font size="-3">
+\small Note, that the reference points can correspond to the deterministic or
+stochastic reference points. This can be chosen within spictapp. If $n < 1$, the
+deterministic reference points are used.
+
+</font>
+\normalsize
+
+## Predictions
+
+Similarly to the states, the predictions refer to the absolute and relative
+reference points at the specified time (chosen with the setting called
+'Management evaluation time' or `maneval`). Additionally, this table includes
+predicted catch during the management period (as specified with 'Management
+interval' or `maninterval`) and `E(B_inf)` is the predicted equilibrium biomass
+and current fishing mortality.
+
+```{r fitpred}
+if(!is.null(params$rv$fit))
+    kable(
+        round(sumspict.predictions(params$rv$fit),3),
+        booktabs = TRUE,
+        caption = "Model predictions.")
+```
+
+The 4 main plots of SPiCT summarising the results graphically, are the relative
+biomass and fishing mortality (relative to reference points), the catch plot,
+and the Kobe plot. The kobe plot is a phase plot showing the stock development
+in terms of biomass and fishing mortality simultaneously. The shaded areas show
+the 95% confidence intervals.
+
+```{r fitplot, fig.width=9, fig.height=8, fig.cap = "SPiCT plot.\\label{fig:fitplot}"}
+if(!is.null(params$rv$fit)) plot2(params$rv$fit)
+```
+
+<font size="-3">
+\small Find the absolute biomass and fishing mortality graphs among others in
+the appendix of this report.
+
+</font>
+\normalsize
+
+<br><br>
+
+# Diagnostics
+
+The evaluation and cross-validation of the model fitting is a crucial step in
+any stock assessment. The minimum model evaluation for a SPiCT assessment should
+include the consideration of the assumptions of the input data (see
+@spict_guidelines), checking residuals against violation of independence,
+normality, biases, or auto-correlation, as well as evaluating the prior and
+posterior distributions of used priors. Additionally, the retrospective analysis
+and sensitivity analysis for intital values is recommended.
+
+```{r}
+if(!is.null(params$rv$fit))
+    kable(sumspict.diagnostics(params$rv$fit),
+        booktabs = TRUE,
+        caption = "Model diagnostics.")
+```
+
+This can also be evaluated visually:
+
+```{r diagplot, fig.width=7, fig.height=8, fig.cap = "Model diagnostics.\\label{fig:diagplot}"}
+if(!is.null(params$rv$fit)) plotspict.diagnostic(params$rv$fit)
+```
+
+Ideally, the prior and posterior distributions do not fully overlap. Overlapping
+distributions indicate that the prior highly affects the model fit, which could
+potentially be due to low contrast in the data.
+
+```{r priorplot, fig.width=5.5, fig.height=8, fig.cap = "Priors.\\label{fig:priorplot}"}
+if(!is.null(params$rv$fit)) plotspict.priors(params$rv$fit)
+```
+
+## Retrospective analysis
+
+The retrospective analysis evaluates the consistency in assessment outcomes as
+additional data (data windows) are added or removed. If the estimates of the
+retrospective analysis 'do not agree and the disagreement is systematic pattern
+of biases rather than a random scattering' the assessment shows the
+'retrospective problem' [@mohn1999].
+
+```{r retroplot, fig.width=9, fig.height=8, fig.cap = "Retrospective analysis\\label{fig:retroplot}"}
+if(!is.null(params$rv$retro)) plotspict.retro(params$rv$retro)
+```
+
+<font size="-3">
+\small The differences between the various trajectories should not be too large,
+should be within the 95% confidence interals of the base assessment (grey area),
+and should not show a consistent pattern, e.g. F consistently smaller the more
+data points removed.
+
+</font>
+\normalsize
+
+## *Sensitivity analysis to inital values*
+
+The sensitivity analysis evaluates the consistency in assessment outcomes with
+different initial values. Disagreeing assessment outcomes for the different
+model fits indicate potential problems with underlying assessment.
+
+```{r}
+if(!is.null(params$rv$sensi))
+    kable(sumspict.ini(params$rv$sensi[[1]]),
+        booktabs = TRUE,
+        caption = "Relative difference between initial values of different trials and base run.")
 ```
 
 ```{r}
-if(!is.null(params$rv$mana)){
-
-    sumspict.manage(params$rv$mana)
-}
+if(!is.null(params$rv$sensi))
+    kable(sumspict.ini(params$rv$sensi[[2]]),
+        booktabs = TRUE,
+        caption = "Initial values (log scale) for the different trials used in the sensitivity analysis.")
 ```
-
-TACs
 
 ```{r}
+if(!is.null(params$rv$sensi))
+    kable(sumspict.ini(params$rv$sensi[[3]]),
+        booktabs = TRUE,
+        caption = "Paramater estimates for all trials of the sensitivity analysis, as well as the distance from the parameters of each trial to the base run.")
+```
+
+<font size="-3">
+\small A range of factors can be the reason for high sensitivity to intial
+values, such as local minima in the negative loglikelihood function or missing
+contrast in the input data.
+
+</font>
+\normalsize
+
+<br><br>
+
+# Management
+
+The management scenarios included in spictapp allow comparing and evaluating the
+implications of various strategies on predicted catches and stock status in
+future years. Following management scenarios were choosen:
+`r if(!is.null(params$rv$mana)) names(params$rv$mana$man) else print("No management scenarios analysed!")`
+
+The SPiCT timeline visualises the period of observations, as well as the intermediate
+and management period$^*$.
+
+```{r mantimeline}
 if(!is.null(params$rv$mana)){
-
-    lapply(man.tac(params$rv$mana),round,3)
-
+    man.timeline(params$rv$mana)
+}else if(!is.null(params$rv$fit)){
+    man.timeline(params$rv$fit)
+}else{
+    if(!is.null(params$rv$inp)) man.timeline(params$rv$inp)
 }
 ```
 
+<font size="-3">
+\small $^*$ Note, that the intermediate period defines the time period between
+the last observation (end of catch or effort interval or index) and the start of
+the management interval and thus, is only present if management does not start
+right after the last observation.
 
-## *Summary*
+</font>
+\normalsize
 
-For management purposes, fish stock assessments are mainly conducted for single species or stocks, which describe the manamgent units of a population. There is much to be gained from multi-species and ecosystem models, but data requirements and complexity make them often unsuitable for deriving management advice. For data-poor fisheries, a traditional fish stock assessment solely based on length-frequency (LFQ) data of one year (as presented here) is particularly useful. LFQ data comes with many advantages over long time series of catch and effort or catch-at-age data [Mildenberger2016].
-In this exercise, the exploitation rate and results of the yield per recruit models indicate that the fiseries is close to sustainable exploitation. The exploration of stock status and fisheries characteristics can of course be extended, but go beyond the scope of this tutorial, which is thought to help getting started with the **`SPiCT`** package. Further details about functions and their arguments can be found in the help files of the functions (`help(...)` or `?..`, where the dots refer to any function of the package). Also the two publications by Mildenberger2016 and by Taylor2016 provide more details about the functionality and context of the package.
+The predicted trajectories of catches and states under various management
+scenarios are displayed in different colours in Fig. \ref{fig:manplot}.
 
+```{r manplot, fig.width=9, fig.height=8, fig.cap = "Management scenarios\\label{fig:manplot}"}
+if(!is.null(params$rv$mana)) plot2(params$rv$mana)
+```
 
-## *Author's comment*
+In detial, the difference between the management scenarios are:
 
-If you have comments or questions please write an [email](mailto:t.k.mildenberger@gmail.com) or post an issue at [GitHub](https://github.com/tokami/apps/issues). You can follow the development of **`TropFishR`** on [ResearchGate](https://www.researchgate.net/project/Stochastic-production-model-in-continuous-time-SPiCT).
+```{r mansum}
+if(!is.null(params$rv$mana))
+    kable(sumspict.manage(params$rv$mana),
+        booktabs = TRUE,
+        caption = "Management scenarios.")
+```
 
+The total allowable catch for each management scenario for the period
+`r if(!is.null(params$rv$mana)) params$rv$mana$man[[1]]$inp$maninterval`
+is:
 
-## *References*
+```{r mantac}
+if(!is.null(params$rv$mana)) lapply(man.tac(params$rv$mana),round,3)
+```
 
+<br><br>
 
-## *Appendix*
+# Summary
+
+```{r summary}
+if(is.null(params$rv$fit)){
+    datapoints <- 0
+    datastart <- NaN
+    dataend <- NaN
+    stockstatusB <- NaN
+    bbmsy <- NaN
+    stockstatusF <- NaN
+    ffmsy <- NaN
+    ffac <- "Continuing the F process,"
+    manstart <- NaN
+    manend <- NaN
+    maneval <- NaN
+    bpbmsy <- NaN
+    predcatch <- NaN
+}else{
+    datapoints <- length(params$rv$inp$obssrt)
+    datastart <- params$rv$inp$timerange[1]
+    dataend <- params$rv$inp$timerange[2]
+    bbmsy <- round(get.par("logBlBmsy",params$rv$fit, exp = TRUE)[,2],2)
+    stockstatusB <- ifelse(bbmsy < 1,"overfished","not overfished")
+    ffmsy <- round(get.par("logFlFmsynotS",params$rv$fit, exp = TRUE)[,2],2)
+    stockstatusF <- ifelse(ffmsy > 1,"overfished","not overfished")
+    manstart <- params$rv$inp$maninterval[1]
+    if(round(params$rv$fit$inp$ffac,2) == 1.0){
+        ffac <- "Continuing the F process,"
+    }else if(params$rv$fit$inp$ffac > 1){
+        ffac <- paste0("Increasing the F process by ",round(params$rv$fit$inp$ffac*100), "% in ",manstart,",")
+    }else{
+        ffac <- paste0("Decreasing the F process by ",round(params$rv$fit$inp$ffac*100), "% in ",manstart,",")
+    }
+    predcatch <- paste0(round(get.par("logCp",params$rv$fit, exp = TRUE)[,2],2),params$rv$fit$inp$catchunit)
+    manend <- params$rv$inp$maninterval[2]
+    maneval <- params$rv$inp$maneval
+    bpbmsy <- round(get.par("logBpBmsy",params$rv$fit, exp = TRUE)[,2],2)
+}
+
+```
+
+The stock assessment with SPiCT is based on `r datapoints` data points
+representing the time period from `r datastart` to `r dataend`. The assessment
+indicates that the stock is `r stockstatusB` in terms of biomass
+($\frac{B}{B_{MSY}} =$ `r bbmsy`), and `r stockstatusF` in terms of fishing
+mortality ($\frac{F}{F_{MSY}} =$ `r ffmsy`). `r ffac` the predicted catch for
+the period from `r manstart` to `r manend` is `r predcatch` and the predicted
+biomass relative to $B_{MSY}$ in `r maneval` is `r bpbmsy`.
+
+<br><br>
+
+# Author's comment
+
+If you have comments or questions please write an [email](mailto:t.k.mildenberger@gmail.com) or post an issue at [GitHub](https://github.com/tokami/apps/issues). You can follow the development of **`SPiCT`** on [ResearchGate](https://www.researchgate.net/project/Stochastic-production-model-in-continuous-time-SPiCT).
+
+<br><br>
+
+# References
+
+<br><br>
+
+# Appendix
+
+## Raw data {#app:data}
 
 The complete data set used for the analysis:
 
 ```{r}
-params$rv$dat
+if(!is.null(params$rv$dat))
+    kable(params$rv$dat,
+        booktabs = TRUE,
+        caption = "Full uploaded data.")
 ```
+
+## Full SPiCT summary {#app:summary}
 
 The complete SPiCT model summary:
 
 ```{r}
-summary(params$rv$fit)
+if(!is.null(params$rv$fit)) summary(params$rv$fit)
+```
+
+## SPiCT default plots {#app:plots}
+
+```{r fitplotFull, fig.width=9, fig.height=10, fig.cap = "Full SPiCT default plot.\\label{fig:fitplotFull}"}
+if(!is.null(params$rv$fit)) plot(params$rv$fit)
+```
+
+```{r manplotFull, fig.width=9, fig.height=10, fig.cap = "Management scenarios default SPiCT plot.\\label{fig:maplotFull}"}
+if(!is.null(params$rv$mana)) plot(params$rv$mana)
 ```
