--- a/spictapp/apps/report/spictapp.bib
+++ b/spictapp/apps/report/spictapp.bib
@@ -121,3 +121,15 @@
     note = {fsz154},
     eprint = {http://oup.prod.sis.lan/icesjms/advance-article-pdf/doi/10.1093/icesjms/fsz154/30040850/fsz154.pdf},
 }
+
+
+@article{mohn1999,
+  title={The retrospective problem in sequential population analysis: an investigation using cod fishery and simulated data},
+  author={Mohn, R},
+  journal={ICES Journal of Marine Science},
+  volume={56},
+  number={4},
+  pages={473--488},
+  year={1999},
+  publisher={Oxford University Press}
+}
